src/objects/Retail_Outlook_Temp__c.object
<CustomObject>
    <description>This object is used to get week in the year, current quarter and current year values using SOQL in the RetailOutlookController class. The Date API in SFDC doesn&apos;t have methods to extract the same values.

The data in this object is temporary.</description>
    <fields>
        <fullName>Date1__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date2__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date3__c</fullName>
        <label>Date3</label>
        <type>Date</type>
    </fields>
    <label>Retail Outlook Temp</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Retail Outlook Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Outlook Temp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>